--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -7,11 +7,11 @@
 .Projects > li {
     position: absolute;
     background-color: aliceblue;
-    height: 500px;
-    width: 500px;
+    padding: 10px;
+    width: 50%;
     list-style-type: none;
     transition: 0.3s ease;
-    transform-origin: 250px 250px;
+    transform-origin: 100% 50%;
 }
 
 #l1 {
