--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -6,20 +6,6 @@
 
 .Projects > li {
     position: absolute;
-    background-color: aliceblue;
-    padding: 10px;
-    width: 50%;
     list-style-type: none;
-    transition: 0.3s ease;
-    transform-origin: 100% 50%;
-}
-
-#l1 {
-    background-color: aqua;
-}
-#l2 {
-    background-color: aquamarine;
-}
-#l3 {
-    background-color: bisque;
+    margin-top: 30px;
 }
