--- a/src/Components/Projects/ProjectListItem.css
+++ b/src/Components/Projects/ProjectListItem.css
@@ -1,6 +1,10 @@
-.Projects > li {
-    background-color: aliceblue;
+.liItem {
+    background-color: white;
     width: 50%;
+    margin-top: 5vh;
+    border-radius: 20px;
+}
+.projectItem {
     height: 75vh;
 }
 
@@ -32,6 +36,8 @@
     width: 100%;
     height: 80%;
     object-fit: cover;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 
 .logo {
@@ -51,4 +57,8 @@
 .subheading {
     margin-top: 0;
     margin-bottom: 2em;
+}
+.description {
+    margin-left: 2em;
+    margin-right: 2em;
 }
